--- a/django_web_server/static/fragments/property.html
+++ b/django_web_server/static/fragments/property.html
@@ -78,15 +78,20 @@
 				</div>
 			</div>
     	</div>
-    	<div class='grey-text' style='float:left;margin-top:30px;margin-left:25px;width:30%;'>
+    	<div
+    		class='grey-text drop-shadow'
+    		style='float:left;
+    			margin-top:17px;margin-left:25px;
+    			width:30%;
+    			padding-left:15px;padding-top:15px;padding-bottom:15px;
+    			'>
     		<div>
 	    		<span style='font-size:1.5em;'>Location:</span>
 	    		<br/>
 	    		{{ model.selectedProperty.longLocation }}&nbsp;
-	    		<br/>
     		</div>
-    		<br/>
 			<div ng-if='model.propertyHasArea(model.selectedProperty);'>
+	    		<br/>
 				<span style='font-size:1.5em;'>Size:</span>
 				<br/>
 				<span>
@@ -96,13 +101,22 @@
 					&nbsp;({{ model.propertyAreaSqmText(model.selectedProperty) }})
 				</span>
 			</div>
+			<div ng-if='model.selectedProperty.subproperties.length > 0'>
+				<br/>
+				<span style='font-size:1.5em;'>Items:</span>
+				<br/>
+				<div ng-repeat='sub in model.selectedProperty.subproperties'>
+			    &middot; {{ sub.name }}
+				</div>
+			</div>
     	</div>
+
+
     	<div style='clear:both;'>
     	</div>
 	</div>
 
-	<div class='unselectable'>
-
+	<div ng-if='(model.selectedProperty.description.length > 0) && (model.selectedProperty.description[0] !=="")' class='unselectable'>
 		<div style='font-size:2.5em;margin-left:100px;padding-top:20px;'>
 			<span style='color:#a0bf14;'>Situation & Description</span>
 		</div>
@@ -113,73 +127,7 @@
 				<br/>
 			</span>
 		</div>
-
 	</div>
-
-	<!-- PROPERTIES -->
-<!-- 	<div class='unselectable' style='padding-left:100px;'>
-		<div style='width:100%;' class='unselectable'>
-			<div ng-repeat='property in model.propertiesForCategoryPaged(model.selectedCategory)'
-				style='float:left;
-					margin-right:25px;margin-top:25px;
-					width:324px;
-					padding-bottom:10px;'
-				class='drop-shadow'>
-				<div>
-					<img 
-						style='width:324px;height:200px;'
-						ng-src="{{model.dataImageUrl(property.images[0])}}"
-						title={{property.name}}
-						alt={{property.name}}
-						/>
-				</div>
-				
-				<div
-					class='grey-text ellipsis'
-					style='font-size:1.5em;width:314px;padding-left:10px;'
-					title='{{ property.name }}'
-					>
-					{{ property.name }}
-				</div>
-				
-				<div
-					style='width:324px;padding-left:10px;'
-					class='grey-text'
-					>
-					{{ property.shortLocation }}
-				</div>
-
-				<div ng-if='model.propertyHasArea(property)' style='padding-left:10px;'>
-					<span
-						class='light-green bold'						 
-						style='width:324px;font-size:1.5em;'>
-						{{ model.propertyAreaHaText(property) }}
-					</span>
-					<span
-						class='light-green'						 
-						style='width:324px;font-size:1.0em;'>
-						&nbsp;({{ model.propertyAreaSqmText(property) }})
-					</span>
-				</div>
-				<div ng-if='model.propertyHasArea(property) == false'
-					style='padding-left:5px;'>
-					<span
-						class='white bold'						 
-						style='width:324px;font-size:1.5em;'>
-						none
-					</span>
-				</div>
-				<div style='
-						display: inline-block;
-						margin-left:10px;
-						margin-top:5px;						
-						border-radius: 3px;'
-					class='bold white light-green-background'>
-					&nbsp;MORE INFO&nbsp;
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div style='clear:both;margin-bottom:25px;'>
 	</div>
