--- a/django_web_server/static/fragments/category.html
+++ b/django_web_server/static/fragments/category.html
@@ -102,7 +102,8 @@
 					</span>
 				</div>
 				<a href='#' ng-click="viewProperty(property);">
-					<div style='
+					<div class='green-button' 
+					style='
 							display: inline-block;
 							margin-left:10px;
 							margin-top:5px;						
