--- a/django_web_server/static/fragments/category.html
+++ b/django_web_server/static/fragments/category.html
@@ -101,18 +101,11 @@
 						none
 					</span>
 				</div>
-				<a href='#' ng-click="viewProperty(property);">
-					<div class='green-button' 
-					style='
-							display: inline-block;
-							margin-left:10px;
-							margin-top:5px;						
-							border-radius: 3px;'
-							class='bold white light-green-background'
-							>
-						&nbsp;MORE INFO&nbsp;
-					</div>
-				</a>
+				<div style='margin-left:10px;'>
+					<a href='#' ng-click="viewProperty(property);">
+						<div class='green-button'>MORE INFO</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
