--- a/django_web_server/static/fragments/property.html
+++ b/django_web_server/static/fragments/property.html
@@ -1,7 +1,7 @@
 <div
 	id='PropertyFragment'
 	ng-show='view == Views.PROPERTY'
-	style='width:100%'
+	style='width:100%;padding-bottom:15px;'
 	>
 	<div style='width:100%; position: relative;'>
 
@@ -61,7 +61,8 @@
 					<img 
 						ng-click='model.selectPreviousPropertyImage();'
 						style='display: table-cell;vertical-align:middle;margin-right:10px;'
-						ng-src="/static/image/arrow-left.png"/>
+						ng-src="/static/image/arrow-left.png"
+						ng-class='(model.selectedProperty.images.length > 1) ? "" : "invisible"'/>
 					<img 
 						style='
 							display: table-cell;vertical-align:middle;
@@ -74,27 +75,28 @@
 					<img 
 						ng-click='model.selectNextPropertyImage();'
 						style='display: table-cell;vertical-align:middle;margin-left:10px;'
-						ng-src="/static/image/arrow-right.png"/>
+						ng-src="/static/image/arrow-right.png"
+						ng-class='(model.selectedProperty.images.length > 1) ? "" : "invisible"'/>
 				</div>
 			</div>
     	</div>
     	<div
-    		class='grey-text drop-shadow justify'
+    		class='grey-text drop-shadow justify unselectable'
     		style='float:left;
     			margin-top:17px;margin-left:25px;
     			width:35%;
     			padding-left:15px;padding-top:15px;padding-bottom:15px;padding-right:15px;
     			'>
     		<div>
-	    		<span style='font-size:1.5em;'>Location:</span>
+	    		<span style='font-size:1.5em;'>Location</span>
 	    		<br/>
-	    		{{ model.selectedProperty.shortLocation }}&nbsp;
+	    		&middot;&nbsp;{{ model.selectedProperty.shortLocation }}
 	    		<br/>
-	    		{{ model.selectedProperty.longLocation }}&nbsp;
+	    		&middot;&nbsp;{{ model.selectedProperty.longLocation }}
     		</div>
 			<div ng-if='model.propertyHasArea(model.selectedProperty);'>
 	    		<br/>
-				<span style='font-size:1.5em;'>Size:</span>
+				<span style='font-size:1.5em;'>Size</span>
 				<br/>
 				<span>
 					{{ model.propertyAreaHaText(model.selectedProperty) }}&nbsp;
@@ -105,21 +107,26 @@
 			</div>
 			<div ng-if='model.selectedProperty.subproperties.length > 0'>
 				<br/>
-				<span style='font-size:1.5em;'>Items:</span>
+				<span style='font-size:1.5em;'>Items</span>
 				<br/>
 				<div ng-repeat='sub in model.selectedProperty.subproperties'>
-			    &middot; {{ sub.name }}
+			    &middot;&nbsp;{{ sub.name }}
 				</div>
 			</div>
 			<br/>
 			<div class='green-button'>FOR SALES / PRICING CLICK HERE</div>
     	</div>
+
     	<div style='clear:both;'>
-    	</div>
+		</div>
 	</div>
 
-	<div ng-if='(model.selectedProperty.description.length > 0) && (model.selectedProperty.description[0] !=="")' class='unselectable'>
-		<div style='font-size:2.5em;margin-left:100px;padding-top:20px;'>
+	<div
+		ng-if='(model.selectedProperty.description.length > 0) && (model.selectedProperty.description[0] !=="")'
+		class='unselectable'
+		style='float:left;'>
+
+		<div style='font-size:2.5em;margin-left:100px;margin-top:15px;'>
 			<span style='color:#a0bf14;'>Situation & Description</span>
 		</div>
 		<div class='justify grey-text'
@@ -131,6 +138,41 @@
 		</div>
 	</div>
 
-	<div style='clear:both;margin-bottom:25px;'>
+	<div style='clear:both;'>
 	</div>
+
+	<div ng-if="model.selectedProperty.subproperties.length > 0"
+		class='grey-text justify'
+		style='margin-left:100px;width:60%;'
+		>
+		<div 
+			ng-repeat='sub in model.selectedProperty.subproperties'
+			style='margin-bottom:30px;padding-left:15px;padding-top:15px;padding-right:15px;padding-bottom:15px;'
+			class='drop-shadow'>
+			
+			<div
+				style='font-size:1.5em;'
+				class='green'>
+				{{ sub.name }}
+			</div>
+
+			<div ng-if='model.propertyHasArea(sub);'>
+				<span>
+					{{ model.propertyAreaHaText(sub) }}&nbsp;
+				</span>
+				<span>
+					&nbsp;({{ model.propertyAreaSqmText(sub) }})
+				</span>
+			</div>
+
+			<div ng-if='((sub.description.length > 0) && (sub.description[0].length !== 0))'>
+				<br/>
+				<div ng-repeat='line in sub.description'>
+					{{ line }}
+				</div>
+			<div>			
+		</div>
+	</div>
+
+
 </div>
