navbar links - hand

--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -15,7 +15,9 @@
 					Home
 				</a>
 
-				<a ng-repeat='category in model.categories'
+				<a
+					href=''
+					ng-repeat='category in model.categories'
 					ng-click="gotoCategoryView(category);"
 					style='text-transform:capitalize;'
 					ng-class="((view == Views.CATEGORY) && (model.selectedCategory == category)) ? 'nav-active' : 'nav-inactive'"
