--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -71,14 +71,13 @@
 		</div>
 		    
 	    <div class="third tailbar-column">
-			<div style='width:300px;min-width:300px;'>
-		    	<a
-					class="twitter-timeline"
-					href="https://twitter.com/wsj"
-					data-widget-id="621299416310415360"
-					style='width:300px;'
-					>@FisherRoleandProperty</a>
-			</div>
+			<div style='width:400px;min-width:400px;'>
+	            <a
+	            	class="twitter-timeline"
+	            	href="https://twitter.com/FRprop"
+	            	data-widget-id="621299416310415360"
+	            	style='width:400px;'>tweets @FRprop</a>
+			</div>          
 		</div>
 	</div>
 </div>
