lat lon google maps

--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -1,7 +1,6 @@
 <div id='ContactBar'>
-	<div style="width:100%;color:#B8B8B8;" class='dark-grey-background'>
-
-		<div class='contact unselectable' style='width:100%;'>
+	<div style="width:100%;">
+		<div class='contact unselectable dark-grey-background light-grey' style='width:100%;'>
 
 			<span style='width:100px;'></span>
 
@@ -77,6 +76,5 @@
 
 		  	<!-- END REVERSE ORDER //////////////////////////////////////// -->
 		</div>
-
 	</div>
 </div>
