--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -10,7 +10,7 @@
 		  	<span style='padding-left:50px;'>
 
 				<a
-					href='#'
+					href=''
 					ng-click="gotoHomeView();"
 					ng-class="(view == Views.HOME) ? 'nav-active' : 'nav-inactive'"
 					>
@@ -29,7 +29,7 @@
 
 				<a
 					ng-click="gotoSoldView();"
-					href='#'
+					href=''
 					ng-class="(view == Views.SOLD) ? 'nav-active' : 'nav-inactive'"
 					>Sold</a>
 		  	</span>
