--- a/django_web_server/static/fragments/property.html
+++ b/django_web_server/static/fragments/property.html
@@ -34,7 +34,7 @@
 		    			<br/>
 		    			<a
 		    				style='color:white !important;'
-		    				ng-click='model.selectPreviousPropertyInCategory();' class='bold'>
+		    				ng-click='selectPreviousPropertyInCategory();' class='bold'>
 		    				&laquo;
 		    			</a>
 		    			<span>
@@ -46,7 +46,7 @@
 		    			</span>
 		    			<a 
 			    			style='color:white !important;'
-			    			ng-click='model.selectNextPropertyInCategory();' class='bold'>
+			    			ng-click='selectNextPropertyInCategory();' class='bold'>
 		    				&raquo;
 		    			</a>
 		    		</div>
@@ -135,7 +135,7 @@
 				</div>
 
 				<div style='margin-top:5px;'>
-					<a href='#' ng-click="enquireAfterPriceOfSelectedProperty();">
+					<a href='' ng-click="enquireAfterPriceOfSelectedProperty();">
 						<div class='green-button'>FOR SALES / PRICING CLICK HERE</div>
 					</a>
 				</div>
