--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -58,7 +58,7 @@
 			</div>
 
 			<div ng-repeat='category in model.categories' class='uppercase'>
-				<a href="#" 
+				<a href="" 
 					ng-click='gotoCategoryView(category)'
 					ng-class="(model.selectedCategory == category) ? 'nav-active' : 'nav-inactive'">
 					{{ category }}
