backwards and forwards, and SOLD

--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -30,7 +30,7 @@
 				<a
 					ng-click="gotoSoldView();"
 					href=''
-					ng-class="(view == Views.SOLD) ? 'nav-active' : 'nav-inactive'"
+					ng-class="(model.selectedCategory == 'sold') ? 'nav-active' : 'nav-inactive'"
 					>Sold</a>
 		  	</span>
 		</div>
