--- a/django_web_server/static/fragments/property.html
+++ b/django_web_server/static/fragments/property.html
@@ -41,7 +41,7 @@
 		    				{{ model.propertiesForCategory(model.selectedCategory).indexOf(model.selectedProperty) + 1 }} 
 		    				of 
 		    				{{ model.propertiesForCategory(model.selectedCategory).length }} 
-		    				{{ model.selectedProperty.category }}
+		    				{{ model.selectedCategory }}
 		    				properties	
 		    			</span>
 		    			<a 
