--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -122,7 +122,7 @@
 							Office Address
 						</span>
 						<br/>
-						123 Jellicoe Ave, Rosebank, JHB, South Africa
+						32 Beacon Avenue, Linbro Park, 2065
 					</div>
 
 					<br/>
@@ -132,7 +132,7 @@
 							Phone Number
 						</span>
 						<br/>
-						+27-(0)11-123-4567
+						081 367 0767
 					</div>
 
 					<br/>
@@ -142,7 +142,7 @@
 							Email Address
 						</span>
 						<br/>
-						enquiries@frp.com
+							enquiries@frp.com
 					</div>
 
 					<br/>
