social icons - turned to links for hover

--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -370,3 +370,7 @@ div.tailbar-blurb-header span {
 .invisible {
 	visibility: hidden;
 }
+
+.contact-bar-background {
+	background-color: #404040;
+}
