--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -21,25 +21,24 @@
 						<!-- BEGIN REVERSE ORDER ////////////////////////////////////// -->
 
 						<span style='float:right'>
-					  		<img
-								ng-src="/static/image/icon-linkedin.png"
-								ng-click="openLinkedIn();"
-								/>
+							<a href='' ng-click="openLinkedIn();">
+						  		<img ng-src="/static/image/icon-linkedin.png"/>
+							</a>
 						</span>
 
 						<span style='float:right'>
-					  		<img
-					  			style='margin-right:10px'
-								ng-src="/static/image/icon-twitter.png"
-								ng-click="openTwitter();"
-								/>
+							<a href='' ng-click="openTwitter();">
+						  		<img
+						  			style='margin-right:10px'
+									ng-src="/static/image/icon-twitter.png"
+									/>
+							</a>
 						</span>
 
 						<span style='float:right;margin-right:10px'>
-					  		<img
-								ng-src="/static/image/icon-fb.png"
-								ng-click="openFacebook();"
-								/>
+							<a href='' ng-click="openFacebook();">
+						  		<img ng-src="/static/image/icon-fb.png"/>
+							</a>
 						</span>
 
 					  	<!-- END REVERSE ORDER //////////////////////////////////////// -->
