apache config - incl adming

--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -132,7 +132,7 @@
 							Phone Number
 						</span>
 						<br/>
-						081 367 0767
+						{{ model.contacts[0].phone }}
 					</div>
 
 					<br/>
@@ -142,7 +142,7 @@
 							Email Address
 						</span>
 						<br/>
-							enquiries@frp.com
+						{{ model.contacts[0].email }}
 					</div>
 
 					<br/>
