--- a/django_web_server/static/fragments/contact.html
+++ b/django_web_server/static/fragments/contact.html
@@ -13,10 +13,10 @@
 		</div>
 
 		<div style='
-			text-align:center;
-			margin-left:100px;
-			margin-right:100px;
-			' class='grey-text'>
+				text-align:center;
+				margin-left:100px;
+				margin-right:100px;'
+			class='grey-text'>
 
 			<br/>
 
@@ -35,7 +35,7 @@
 					Phone Number
 				</span>
 				<br/>
-				081 367 0767
+				{{ model.contacts[0].phone }}
 			</div>
 
 			<br/>
@@ -45,7 +45,7 @@
 					Email Address
 				</span>
 				<br/>
-					enquiries@frp.com
+				{{ model.contacts[0].email }}
 			</div>
 
 			<br/>
