--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -98,11 +98,13 @@
 			</div>
 
 			<div class='column column2' style='margin-right:20px;'>
-				<img style='display:block;' ng-src="/static/image/icon-people.png"/>
+<!-- 				<img style='display:block;' ng-src="/static/image/icon-people.png"/> -->
+
+				<div style='height:69px;'></div>
 
 				<div style='margin-top:15px;'>
 					<div style='font-size:2em;'>
-						Partners in Success
+						&nbsp;
 					</div>
 					<div class='justify' style='margin-top:15px;'>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
