dango 1.8; iscc added to contact model

--- a/django_web_server/static/fragments/contact.html
+++ b/django_web_server/static/fragments/contact.html
@@ -45,7 +45,8 @@
 					Email Address
 				</span>
 				<br/>
-				{{ model.contacts[0].email }}
+				<a href='' class='grey-text' ng-click='emailPrimaryContact()'
+					>{{ model.contacts[0].email }}</a>
 			</div>
 
 			<br/>
